k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vayubus-svc
  namespace: vayubus
  labels:
    app: vayubus
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
spec:
  type: LoadBalancer    # ← changed
  selector:
    app: vayubus
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
